--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=8
+spring.datasource.maxIdle=4
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+spring.jpa.generate-ddl=false
