--- a/build_spec.yml
+++ b/build_spec.yml
@@ -35,6 +35,7 @@ steps:
     command: |
       cd ${OCI_WORKSPACE_DIR}/source1
       mvn clean install
+      docker build -t demo_app .
     onFailure:
       - type: Command
         command: |
@@ -50,3 +51,6 @@ outputArtifacts:
   - name: output02
     type: BINARY
     location: ${OCI_WORKSPACE_DIR}/source1/target/bankinformation-0.0.1-SNAPSHOT.jar.original
+  - name: output03
+    type: DOCKER_IMAGE
+    location: demo_app:latest
