--- a/build_spec.yml
+++ b/build_spec.yml
@@ -16,7 +16,7 @@ env:
 #     location: hello123.class
 
 steps:
-  - type: Commands
+  - type: Command
     name: "Export variables"
     timeoutInSeconds: 40
     command: |
