--- a/build_spec.yml
+++ b/build_spec.yml
@@ -31,7 +31,8 @@ steps:
         timeoutInSeconds: 40
         command: |
           echo "Handling Failure"
-          cat ${OCI_WORKSPACE_DIR}/gcn-test/oci/build/native/nativeCompile/error.log
+          cd ${OCI_WORKSPACE_DIR}/gcn-test/oci/build/native/nativeCompile
+          echo "$(<.error.log )"
           echo "Failure successfully handled"
         timeoutInSeconds: 400
         runAs: root
